--- a/src/components/login.scss
+++ b/src/components/login.scss
@@ -1,7 +1,71 @@
+@font-face {
+  font-family: 'Hylia Serif';
+  src: url('./HyliaSerif.otf');
+}
+
+
+body {
+  font-family: Roboto;
+  margin: 0;
+  display: flex;
+  background: #212121;
+  justify-content: center;
+}
+
+.login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 100px;
+}
+
+.title {
+  text-align: center;
+  font-family: Hylia Serif;
+  color: white;
+  margin-bottom: 20px;
+  position: relative;
+
+  .sub {
+    position: relative;
+    font-size: 24px;
+    left: -100px;
+    bottom: -20px;
+  }
+
+  .main {
+    font-size: 50px;
+  }
+}
+
+.desc {
+  font-size: 24px;
+  color: white;
+  margin-bottom: 20px;
+}
+
 .login-button {
   background: #6441A4;
-  &:after {
+  display: flex;
+  height: 32px;
+  padding: 0 16px;
+  line-height: 32px;
+  border-radius: 2px;
+  color: white;
+  text-decoration: none;
+  font-size: 14px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
+  span {
+    pointer-events: none;
+  }
+
+  &:before {
     content: '';
-    background-image: url(/assets/twitch.svg);
+    background-image: url(./twitch.svg);
+    background-repeat: no-repeat;
+    height: 16px;
+    width: 16px;
+    margin: 8px 8px 8px 0;
   }
 }
