--- a/src/components/rupeeGoal.scss
+++ b/src/components/rupeeGoal.scss
@@ -37,6 +37,14 @@ body {
       background-color: #1B5E20;
     }
 
+    &.clear {
+      height: inherit;
+      width: inherit;
+      padding: 4px 8px;
+      font-size: 12px;
+      margin: 0 16px;
+    }
+
   }
   .acquired {
     margin: 30px 0;
