--- a/src/components/leaderboard.scss
+++ b/src/components/leaderboard.scss
@@ -11,7 +11,13 @@ body {
   margin: 20px;
 }
 
-
+.toprow {
+  display: flex;
+  justify-content: space-between;
+  flex: 1;
+  width: 280px;
+  padding: 0 4px;
+}
 
 .places {
   display: flex;
@@ -49,14 +55,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 256px;
+  width: 288px;
   padding: 0 8px 0 8px;
   margin: 4px 0;
-  .name {
-    flex: 1;
+  .name, .time {
     display: flex;
     align-items: center;
-    padding: 0 4px;
   }
   .score {
     background: #424242;
@@ -83,6 +87,7 @@ body {
 }
 
 .dungeons {
+  height: 32px;
   display: flex;
 }
 
