--- a/src/components/leaderboard.scss
+++ b/src/components/leaderboard.scss
@@ -55,7 +55,7 @@ body {
   margin-right: 20px;
   .place {
     margin: 4px 0;
-    height: 64px;
+    height: 32px;
     display: flex;
     align-items: center;
     color: rgb(128, 128, 128);
@@ -78,19 +78,24 @@ body {
 .entry {
   transition: transform 0.3s ease-in-out;
   position: absolute;
-  height: 64px;
+  height: 32px;
   border-radius: 16px;
   background: #303030;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+  justify-content: space-between;
   width: 288px;
-  padding: 0 8px 4px 8px;
   margin: 4px 0;
   .name, .time {
     display: flex;
     align-items: center;
+  }
+  .name {
+    margin-left: 12px;
+  }
+  .time {
+    margin-right: 12px;
   }
   .score {
     background: #424242;
